Add apple req in 42

--- a/15/index.html
+++ b/15/index.html
@@ -8,6 +8,7 @@
   <link type="text/css" href="../_css/w3.css" rel="stylesheet">
   <link type="text/css" href="../_css/pwa-course.css" rel="stylesheet">
   <link rel="manifest" href="./manifest.json">
+   <link rel="canonical" href="https://wp-html.co.uk"/>
   <!-- colour of status bar -->
   <meta name="theme-color" content="#2196f3" />
   <!-- Apple -->
