--- a/42/index.html
+++ b/42/index.html
@@ -8,6 +8,32 @@
   <link type="text/css" href="../_css/w3.css" rel="stylesheet">
   <link type="text/css" href="../_css/pwa-course.css" rel="stylesheet">
   <link rel="manifest" href="./manifest.json">
+  <link rel="canonical" href="https://wp-html.co.uk/courses/pwa/42"/>
+  <!-- colour of status bar -->
+  <meta name="theme-color" content="#2196f3" />
+  <!-- Apple -->
+  <meta name="apple-mobile-web-app-title" content="wpPWA">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <link rel="apple-touch-startup-image" href="../_images/wppwa.png">
+  <link rel="apple-touch-icon" sizes="57x57" href="images-manifest/apple-touch-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="../_images-manifest/apple-touch-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="../_images-manifest/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="../_images-manifest/apple-touch-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="../_images-manifest/apple-touch-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="../_images-manifest/apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="../_images-manifest/apple-touch-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="../_images-manifest/apple-touch-icon-152x152.png">
+  <link rel="icon" type="image/png" href="../_images-manifest/icon-192x192.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="../_images-manifest/icon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/png" href="../_images-manifest/icon-144x144.png" sizes="144x144">
+  <link rel="icon" type="image/png" href="../_images-manifest/icon-128.png" sizes="128x128">
+  <!-- MicroSoft -->
+  <meta name="msapplication-TileColor" content="#2D91F8">
+  <meta name="msapplication-TileImage" content="../_images-manifest/icons/ms-icon-144x144.png">
+  <meta name="msapplication-square70x70logo" content="../_images-manifest/icons/ms-icon-70x70.png">
+  <meta name="msapplication-square150x150logo" content="../_images-manifest/icons/ms-icon-150x150.png">
+  <meta name="msapplication-square310x310logo" content="../_images-manifest/icons/ms-icon-310x310.png">
   <!-- cross browser omitted for intermiary lessons -->
   <title>42 PWA</title>
 </head>
