--- a/23/index.html
+++ b/23/index.html
@@ -49,7 +49,8 @@
   </footer>
   <script src="../_js/deferrred-prompt.js"></script>
 
-  
   <script src="../_js/gone-offline.js"></script>
+  <script src="../_js/style-offline.js"></script>
+
 </body>
 </html>
