OK 15MAY200 to 42

--- a/40/index.html
+++ b/40/index.html
@@ -43,7 +43,7 @@
             <button id="add" class="w3-button w3-blue w3-medium">ADD TO HOMESCREEN</button>
           </div>
           <h1>40 BackgroundSync - sending forms when offline.</h1>
-          <p><a href="notifications.html">Demo of the Notifications API</a></p>
+          <p><a href="https://developers.google.com/web/fundamentals/push-notifications/display-a-notification#top_of_page" target="_blank">https://developers.google.com/web/fundamentals/push-notifications/display-a-notification#top_of_page</a></p>
           <p>BackgroundSync NOT in SW.</p>
           <div id="usage"></div>
         </div>
@@ -160,7 +160,7 @@ function fully off line. -->
         console.log(output);
       })
       .catch(function (error) {
-        alert("Ooops: " + error);
+        console.log("Ooops: " + error);
       });
   </script>
   <footer>
