--- a/41/index.html
+++ b/41/index.html
@@ -165,7 +165,7 @@ function fully off line. -->
         console.log(output);
       })
       .catch(function (error) {
-        alert("Ooops: " + error);
+       console.log("Ooops: " + error);
       });
   </script>
   <script>
