--- a/42/form.html
+++ b/42/form.html
@@ -84,7 +84,7 @@
                         <script src="../_js/localforage.min.js"></script>
                         <script>
                             const sw = document.getElementById('sw');
-                            sw.innerHTML = 'message from service worker goes here';
+                            sw.innerHTML = 'message from service worker goes here: ';
 
                             // add an event listener for messge froim SW
                             navigator.serviceWorker.addEventListener("message", function(event) {
