--- a/42/index.html
+++ b/42/index.html
@@ -191,7 +191,7 @@
         console.log(output);
       })
       .catch(function (error) {
-        alert("Ooops: " + error);
+        console.log("Ooops: " + error);
       });
   </script>
   <script>
