--- a/31/index.html
+++ b/31/index.html
@@ -169,7 +169,7 @@ function fully off line. -->
         console.log(output);
       })
       .catch(function (error) {
-        alert("Ooops: " + error);
+        console.log("Ooops: " + error);
       });
   </script>
   
