edit style contacts

--- a/42/contacts.html
+++ b/42/contacts.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=0, user-scalable=0">
@@ -11,38 +12,39 @@
   <!-- cross browser omitted for intermiary lessons -->
   <title>40 CONTACTS</title>
 </head>
+
 <body>
- <!-- MAINTAIN OFFLINE STYLE WHEN NAVIGATING OFFLINE -->
- <script src="../_js/style-offline.js"></script>
- <!-- RESPOND TO CHANGE IN ONLINE?OFFLINE -->
- <script src="../_js/gone-offline.js"></script>
- <!-- REGISTER SERVICE WORKER -->
- <script src="../_js/register-sw.js"></script>
- <nav>
-   <div class="w3-container w3-blue header">
-     <img src="../_images/wppwa.png" style="width:20px;height:20px;"  alt="icon image">
-     <span style="margin-left:10px;">
-       <a href="index.html">HOME</a>&nbsp;&nbsp;
-       <a href="articles.html">POSTS</a>&nbsp; &nbsp;
-       <a href="contacts.html">CONTACTS</a>&nbsp; &nbsp;
-       <a href="form.html">FORM</a>
-     </span>
-   </div>
- </nav>
- <main>
-   <div class="w3-main">
-    <!-- DISPLAY ONLINE/OFFLINE STATUS -->
-     <header class="w3-container">
-       <div id="status"></div>
-       <br>
-     </header>
-          <div class="w3-card-4" style="margin:20px auto;padding:30px;max-width:1200px">
-            <div id="total" style="padding:20px; word-break: break-all;"></div>
-            <div id="mainContent"></div>
-          </div>
-          <br>
-          </div>
+  <!-- MAINTAIN OFFLINE STYLE WHEN NAVIGATING OFFLINE -->
+  <script src="../_js/style-offline.js"></script>
+  <!-- RESPOND TO CHANGE IN ONLINE?OFFLINE -->
+  <script src="../_js/gone-offline.js"></script>
+  <!-- REGISTER SERVICE WORKER -->
+  <script src="../_js/register-sw.js"></script>
+  <nav>
+    <div class="w3-container w3-blue header">
+      <img src="../_images/wppwa.png" style="width:20px;height:20px;" alt="icon image">
+      <span style="margin-left:10px;">
+        <a href="index.html">HOME</a>&nbsp;&nbsp;
+        <a href="articles.html">POSTS</a>&nbsp; &nbsp;
+        <a href="contacts.html">CONTACTS</a>&nbsp; &nbsp;
+        <a href="form.html">FORM</a>
+      </span>
+    </div>
+  </nav>
+  <main>
+    <div class="container">
+      <!-- DISPLAY ONLINE/OFFLINE STATUS -->
+      <header class="w3-container">
+        <div id="status"></div>
+        <br>
+      </header>
+      <div class="" style="margin:20px auto;padding:30px;">
+        <div id="total" style="padding:20px; word-break: break-all;"></div>
+        <div id="mainContent"></div>
+      </div>
+    </div>
   </main>
+
   <!-- Include dexie.js -->
   <script src="../_js/dexie.js"></script>
   <script>
@@ -55,9 +57,9 @@
     });
     const main = document.getElementById("mainContent");
     db.contacts.each(function (contact) {
-      output += "<hr>" + contact.firstName + " " + contact.lastName + "<br>";
-      output += contact.email + "<br>";
-      output += contact.telMob + "<br>"
+      output += '<div class="card"><h2>' + contact.firstName + ' ' + contact.lastName + '</h2>';
+      output += contact.email + '<br>';
+      output += contact.telMob + '<br></div>'
       main.innerHTML = output;
       people.push(contact.email)
     }).then(function () {
@@ -78,6 +80,7 @@
       <p>PWA WORKSHOP - &copy; Craig West 2020</p>
     </div>
   </footer>
-  <script src="../_js/deferrred-prompt.js"></script>
+
 </body>
+
 </html>
