--- a/42/article.html
+++ b/42/article.html
@@ -9,7 +9,7 @@
   <link type="text/css" href="../_css/pwa-course.css" rel="stylesheet">
   <link rel="manifest" href="./manifest.json">
   <!-- cross browser omitted for intermiary lessons -->
-  <title>40 ARTICLE</title>
+  <title>42 ARTICLE</title>
 
 </head>
 
@@ -32,7 +32,7 @@
     </div>
   </nav>
   <main>
-    <div class="w3-main" style="margin:10px auto;max-width:1200px;">
+    <div class="w3-main" style="margin:10px auto;max-width:1000px;">
       <div style="margin: 0 10px 0 10px;">
         <!-- DISPLAY ONLINE/OFFLINE STATUS -->
         <header class="w3-container">
@@ -40,8 +40,9 @@
           <br>
         </header>
         <div class="w3-card-4" style="padding:40px;font-size:1.0rem; word-break: break-all;">
-          <h2><a href="articles.html">BACK TO ARTICLES</a></h2>
- 
+          <h2>
+            <a href="articles.html">BACK TO ARTICLES</a>
+          </h2>
           <div id="mainContent"></div>
         </div>
         <br>
