--- a/42/contacts.html
+++ b/42/contacts.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=0, user-scalable=0">
@@ -10,9 +9,17 @@
   <link type="text/css" href="../_css/pwa-course.css" rel="stylesheet">
   <link rel="manifest" href="./manifest.json">
   <!-- cross browser omitted for intermiary lessons -->
-  <title>40 CONTACTS</title>
+  <title>42 CONTACTS</title>
+  <style>
+    .card {
+      border: 2px solid orange;
+      padding: 15px;
+      margin: 10px auto;
+      border-radius: 5px;
+      max-width: 400px;
+    }
+  </style>
 </head>
-
 <body>
   <!-- MAINTAIN OFFLINE STYLE WHEN NAVIGATING OFFLINE -->
   <script src="../_js/style-offline.js"></script>
@@ -32,19 +39,16 @@
     </div>
   </nav>
   <main>
-    <div class="container">
+    <div class="container" >
       <!-- DISPLAY ONLINE/OFFLINE STATUS -->
       <header class="w3-container">
         <div id="status"></div>
         <br>
       </header>
-      <div class="" style="margin:20px auto;padding:30px;">
-        <div id="total" style="padding:20px; word-break: break-all;"></div>
-        <div id="mainContent"></div>
-      </div>
+      <div id="total"></div>
+      <div id="mainContent"></div>
     </div>
   </main>
-
   <!-- Include dexie.js -->
   <script src="../_js/dexie.js"></script>
   <script>
@@ -53,11 +57,11 @@
     const db = new Dexie("wpCONTACTS");
     let people = [];
     db.version(1).stores({
-      contacts: 'firstName, lastName, telMob, email' // select which field to access
+      contacts: 'firstName, lastName, telMob, email' // select which fields to access
     });
     const main = document.getElementById("mainContent");
     db.contacts.each(function (contact) {
-      output += '<div class="card"><h2>' + contact.firstName + ' ' + contact.lastName + '</h2>';
+      output += '<div class="card" ><h2>' + contact.firstName + ' ' + contact.lastName + '</h2>';
       output += contact.email + '<br>';
       output += contact.telMob + '<br></div>'
       main.innerHTML = output;
@@ -72,7 +76,11 @@
       console.log(val);
       //alert(val);
       total.innerHTML =
-        `<h2 style="margin-left:0px;">There are ${val} contacts</h2><h3>CONTACTS with dexie.js</h3>`;
+        `<div class="card" >
+          <h1>There are ${val} contacts</h1>
+          <h3><b>Using dexie.js library</b></h3>
+          <h3><b><a href="https://randomuser.me" target="_blank">randomuser.me</a> api</b></h3>
+        </div>`;
     })
   </script>
   <footer>
@@ -80,7 +88,5 @@
       <p>PWA WORKSHOP - &copy; Craig West 2020</p>
     </div>
   </footer>
-
 </body>
-
 </html>
