--- a/42/fallback.html
+++ b/42/fallback.html
@@ -30,7 +30,7 @@
     </header>
     <div class="w3-card-4" style="margin:auto;width:80%;background:#ccc;">
       <div style="padding:30px;">
-        <h1>Fallback Page</h1>
+        <h1><b>Fallback Page</b></h1>
         <h2>This can be a gracefull handling of 'no network connection'</h2>
         <h2>Guardian has an offline crossword puzzle. Some sites show articles user has saved for offline use.</h2>
         <h1><em>"We are unable to get that page for you...why not try another page."</em></h1>
