--- a/23/sample02.html
+++ b/23/sample02.html
@@ -45,7 +45,7 @@
     
     <nav>
         <div class="w3-container w3-blue header" s>
-          <img src="../images/wppwa.png" style="width:20px;height:20px;">
+          <img src="../_images/wppwa.png" style="width:20px;height:20px;">
           <span style="margin-left:10px;">
             <a href="index.html">HOME</a>&nbsp;&nbsp;
             <a href="articles.html">POSTS</a>&nbsp; &nbsp;
