--- a/24/sample01.html
+++ b/24/sample01.html
@@ -45,7 +45,7 @@
     
     <nav>
         <div class="w3-container w3-blue header" s>
-          <img src="../images/wppwa.png" style="width:20px;height:20px;">
+          <img src="../_images/wppwa.png" style="width:20px;height:20px;">
           <span style="margin-left:10px;">
             <a href="index.html">HOME</a>&nbsp;&nbsp;
             <a href="articles.html">POSTS</a>&nbsp; &nbsp;
@@ -58,10 +58,8 @@
     <div class="status"></div>
     <p>&nbsp;</p>
     <p class="img" ></p>
-    <script src="../_js/style-offline.js">
-    </script>
-    <!-- RESPOND TO CHANGE IN OFFLINE|ONLINE STATUS -->
+    
     <script src="../_js/gone-offline.js"></script>
+    <script src="../_js/style-offline.js"></script>
   
-</body>
 </html>
