--- a/24/sample04.html
+++ b/24/sample04.html
@@ -44,7 +44,7 @@
 <body>
     <nav>
         <div class="w3-container w3-blue header" s>
-          <img src="../images/wppwa.png" style="width:20px;height:20px;">
+          <img src="../_images/wppwa.png" style="width:20px;height:20px;">
           <span style="margin-left:10px;">
             <a href="index.html">HOME</a>&nbsp;&nbsp;
             <a href="articles.html">POSTS</a>&nbsp; &nbsp;
@@ -59,6 +59,6 @@
     <p class="img" ></p>
     
     <script src="../_js/isOffline.js"></script>
-   
+ 
 </body>
 </html>
