--- a/31/sample04.html
+++ b/31/sample04.html
@@ -44,7 +44,7 @@
 <body>
     <nav>
         <div class="w3-container w3-blue header" s>
-          <img src="../images/wppwa.png" style="width:20px;height:20px;">
+          <img src="../_images/wppwa.png" style="width:20px;height:20px;">
           <span style="margin-left:10px;">
             <a href="index.html">HOME</a>&nbsp;&nbsp;
             <a href="articles.html">POSTS</a>&nbsp; &nbsp;
@@ -54,11 +54,11 @@
         </div>
       </nav>
     <h1>SAMPLE 04</h1>
-    <h1>You are currently <span id="status">UNKNOWN</span></h1>
+    <div class="status"></div>
     <p>&nbsp;</p>
     <p class="img" ></p>
     
     <script src="../_js/isOffline.js"></script>
-    <script src="../_js/showOfflineStyle.js"></script>
+ 
 </body>
 </html>
