--- a/40/sample02.html
+++ b/40/sample02.html
@@ -45,7 +45,7 @@
     
     <nav>
         <div class="w3-container w3-blue header" s>
-          <img src="../images/wppwa.png" style="width:20px;height:20px;">
+          <img src="../_images/wppwa.png" style="width:20px;height:20px;">
           <span style="margin-left:10px;">
             <a href="index.html">HOME</a>&nbsp;&nbsp;
             <a href="articles.html">POSTS</a>&nbsp; &nbsp;
@@ -54,12 +54,12 @@
           </span>
         </div>
       </nav>
-    <h1>SAMPLE 04</h1>
-    <h1>You are currently <span id="status">UNKNOWN</span></h1>
+    <h1>SAMPLE 02</h1>
+    <div class="status"></div>
     <p>&nbsp;</p>
     <p class="img" ></p>
     
-    <script src="../_js/isOffline.js"></script>
-    <script src="../_js/showOfflineStyle.js"></script>
+    <script src="../_js/gone-offline.js"></script>
+ 
 </body>
 </html>
