--- a/42/articles.html
+++ b/42/articles.html
@@ -9,15 +9,10 @@
   <link type="text/css" href="../_css/pwa-course.css" rel="stylesheet">
   <link rel="manifest" href="./manifest.json">
   <!-- cross browser omitted for intermiary lessons -->
-  <title>40 ARTICLES</title>
+  <title>42 ARTICLES</title>
 </head>
 <body>
-  <!-- MAINTAIN OFFLINE STYLE WHEN NAVIGATING OFFLINE -->
-  <script src="../_js/style-offline.js"></script>
-  <!-- RESPOND TO CHANGE IN ONLINE?OFFLINE -->
-  <script src="../_js/gone-offline.js"></script>
-  <!-- REGISTER SERVICE WORKER -->
-  <script src="../_js/register-sw.js"></script>
+
   <nav>
     <div class="w3-container w3-blue header">
       <img src="../_images/wppwa.png" style="width:20px;height:20px;" alt="icon image">
@@ -29,13 +24,29 @@
       </span>
     </div>
   </nav>
-  <main>
-  
-      <div class="w3-card-4" style="max-width:1200px;padding:30px;margin:20px auto;">
-        <div id="mainContent"></div>
-      </div>
+ 
    
-  </main>
+    <main>
+      <div class="w3-container">
+       <!-- DISPLAY ONLINE/OFFLINE STATUS -->
+        <header class="w3-container">
+          <div id="status"></div>
+          <br>
+        </header>
+        <div class="w3-card-4" style="margin:0 auto;max-width:1000px">
+          <div style="padding:30px;">
+            <div id="mainContent"></div>
+          </div>
+        </div>
+        <div style="height:40px;"></div>
+      </div>
+    </main>
+  <!-- MAINTAIN OFFLINE STYLE WHEN NAVIGATING OFFLINE -->
+  <script src="../_js/style-offline.js"></script>
+  <!-- RESPOND TO CHANGE IN ONLINE?OFFLINE -->
+  <script src="../_js/gone-offline.js"></script>
+  <!-- REGISTER SERVICE WORKER -->
+  <script src="../_js/register-sw.js"></script>
   <!-- POLYFILLS FOR PROMISES AND FETCCH -->
   <script src="../_js/promise.js"></script>
   <script src="../_js/fetch.js"></script>
@@ -58,8 +69,8 @@
           for (var i = 0; i < response.length; i++) {
             //articleURL = "article.php?id=" + i;
             articleURL = "article.html?id=" + response[i].id;
-            output += "<p>" + (i + 1) + ". Article Number: " + response[i].id;
-            output += " - <a href='" + articleURL + "'>" + response[i].title + "</a></p>";
+            output += "<p>" + (i + 1) + ". Article Number: " + response[i].id + "</p>";
+            output += "<p><a href='" + articleURL + "'>" + response[i].title + "</a></p>";
           }
           // output posts to page
           document.getElementById("mainContent").innerHTML = output;
