--- a/42/index.html
+++ b/42/index.html
@@ -102,7 +102,8 @@
     //var wpURL = "https://wpjs.co.uk/wpb/wp-json/wp/v2/posts";
     fetch(wpURL)
       .then(function (response) {
-        //console.log(response);
+        console.log(response);
+      
         return response.json();
       })
       .then(function (data) {
