--- a/20/index.html
+++ b/20/index.html
@@ -54,6 +54,7 @@
         <p>Users won't know about this so there are ways to do it programatically. We look at this later. For now, we
           can understand the lifecycles of SW.
         </p>
+        <p><em>Demonstrate routing - <a href="ndc">route</a> gives custom Response.</em></p>
       </div>
     </div>
     <div style="height:40px;"></div>
