--- a/24/fallback2.html
+++ b/24/fallback2.html
@@ -28,12 +28,11 @@
       <div id="status" style=""></div>
       <br>
     </header>
-    <div class="w3-card-4" style="margin:auto;width:80%;background:#ccc;">
+    <div class="w3-card-4" style="margin:auto;width:80%;background:red;color:white">
       <div style="padding:30px;">
-        <h1>Fallback Page for sample01.html</h1>
-        <h2>This can be a gracefull handling of 'no network connection'</h2>
-        <h2>Guardian has an offline crossword puzzle. Some sites show articles user has saved for offline use.</h2>
-        <h1><em>"We are unable to get that page for you...why not try another page."</em></h1>
+        <h1>Fallback Page 2 for other pages.</h1>
+        <p>A different message goes here...</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, unde ut! Sapiente totam beatae perspiciatis porro pariatur ipsa aliquam nisi quidem dolores. Consequatur fugit quos repellat mollitia dignissimos suscipit repudiandae.</p>
       </div>
     </div>
     <br><br>
