two fallback pages

--- a/23/index.html
+++ b/23/index.html
@@ -32,10 +32,11 @@
       <div class="status"></div>
  
       <h1>23 Dynamic cache and  Fallback page</h1>
-      <p>We have added a method to <em>clone</em>clone response from network and place in DYNAMIC CACHE.</p>
+      <p>We have added a method to <em>clone</em> responses from network and place in DYNAMIC CACHE. The response is a stream and can only be used once so we must make a clone (copy).</p>
       <p>If the page is not in cache or available from the network then the CATCH error occurs. We can server up the FALLBACK page.</p>
       <p>We have added .skipWaiting to programatically activate the new SW.</p>
       <p>We can determine the nature of the request, (HTML, CSS, image etc) and then serve back various FALLBACK pages.</p>
+      <p><em>Different fallback page for sample01.html than others.</em></p>
       <br>
     </div>
     </div>
