edit list on index 50

--- a/50/index.html
+++ b/50/index.html
@@ -72,6 +72,7 @@
           <p>Enable Notifications</p>
           <p>Service Worker with CacheAndNetworkThenStoreOrFallback strategy.</p>
           <p>Use of Cache API to store pages initially and dynamically.</p>
+          <p>Detect ONLINE | OFFLINE status and notify user via styling and OFFLINE message.</p>
           <p>Offline capability for cached pages.</p>
           <p>Graceful FALLBACK page for form.html</p>
           <p>Graceful generic FALLBACK page for all other html pages.</p>
