--- a/50/index.html
+++ b/50/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=0, user-scalable=0">
@@ -38,9 +37,7 @@
   <!-- cross browser omitted for intermiary lessons -->
   <title>50 PWA - FINAL VERSION</title>
 </head>
-
 <body>
-
   <!-- REGISTER SERVICE WORKER -->
   <script src="../_js/register-sw.js"></script>
   <nav>
@@ -68,7 +65,8 @@
             <button id="add" class="w3-button w3-blue w3-medium">ADD TO HOMESCREEN</button>
           </div>
           <h3>50 FINAL VERSION</h3>
-          <p>Add to Homescreen installation.</p>
+          <p>Add to Homescreen/Desktop installation.</p>
+          <p>Open with Native App UI.</p>
           <p>Enable Notifications</p>
           <p>Service Worker with CacheAndNetworkThenStoreOrFallback strategy.</p>
           <p>Use of Cache API to store pages initially and dynamically.</p>
@@ -76,10 +74,9 @@
           <p>Offline capability for cached pages.</p>
           <p>Graceful FALLBACK page for form.html</p>
           <p>Graceful generic FALLBACK page for all other html pages.</p>
-          <p>IndexedDB to store data in broswer's own database.</p>
+          <p>IndexedDB to store data in browser's own database.</p>
           <p>BackgroundSync to save form data and POST when back online.</p>
           <p>Two way messaging between Page and Service Worker.</p>
-
           <div id="messages"></div>
           <div id="usage"></div>
         </div>
@@ -111,15 +108,12 @@
   <script src="../_js/idb-fn.js"></script>
   <!-- REQEUST NOTIFICATIONS PERMISSION -->
   <script src="../_js/request-notifications-permission.js"></script>
-  
-
   <!-- We now load KB, Contacts and Calendar so that user has all these on first page visit.
     This is for demo purposes but it means the device is now completely local and can 
     function fully off line. 
   -->
   <!-- LOAD POSTS -->
   <script>
-    
     var wpURL = "https://wpjs.co.uk/wpb/wp-json/wp/v2/posts?categories=24";
     //var wpURL = "https://wpjs.co.uk/wpb/wp-json/wp/v2/posts";
     fetch(wpURL)
@@ -228,12 +222,11 @@
       <p>PWA WORKSHOP - &copy; Craig West 2020</p>
     </div>
   </footer>
-    <!-- MAINTAIN OFFLINE STYLE WHEN NAVIGATING OFFLINE -->
-    <script src="../_js/style-offline.js"></script>
-    <!-- RESPOND TO CHANGE IN ONLINE?OFFLINE -->
-    <script src="../_js/gone-offline.js"></script>
-    <!-- CAPTURE ADD TO HOMESCREEN EVENT -->
-    <script src="../_js/deferrred-prompt.js"></script>
+  <!-- MAINTAIN OFFLINE STYLE WHEN NAVIGATING OFFLINE -->
+  <script src="../_js/style-offline.js"></script>
+  <!-- RESPOND TO CHANGE IN ONLINE?OFFLINE -->
+  <script src="../_js/gone-offline.js"></script>
+  <!-- CAPTURE ADD TO HOMESCREEN EVENT -->
+  <script src="../_js/deferrred-prompt.js"></script>
 </body>
-
 </html>
