Add links to contents file

--- a/30/index.html
+++ b/30/index.html
@@ -35,7 +35,7 @@
       <button id="add" class="w3-button w3-blue w3-medium">ADD TO HOMESCREEN</button>
       <br><br>
       <h1>30 IndexedDBs</h1>
-      <p>We look at how we can use the broswer's own database, IndexedDB, to store many types of data.</p>
+      <p>We look at how we can use the browser's own database, IndexedDB, to store many types of data.</p>
       <p>Combined with a template page, we can create dynamic pages whilst offline with almost instant speed.</p>
       <p>We have cached idb.html but until it is loaded, the IndexedDB load will not have been fired. Going to idb.html
         for the first time and offline will render the page but not the posts.</p>
