V 07JUN2020 WordUp PWA

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   </main>
   <footer>
     <div class="w3-container w3-blue w3-center footer">
-      <p>PWA WORKSHOP - &copy; Craig West 2020</p>
+      <p>PWA WORKSHOP - &copy; Craig West 2020 Version: 07JUN2020</p>
     </div>
   </footer>
 </body>
