--- a/10/index.html
+++ b/10/index.html
@@ -39,6 +39,7 @@
             <img src="../_images/what.png" alt="what wweb can do">
             <img src="../_images/what2.png" alt="what web can do 2">
           </div>
+          <p>let's run Lighthouse Test</p>
         </div>
       </div>
     </div>
