--- a/11/index.html
+++ b/11/index.html
@@ -34,7 +34,7 @@
           <a href="https://developers.google.com/web/fundamentals/app-install-banners"
             target="_blank">https://developers.google.com/web/fundamentals/app-install-banners</a></p>
         <p>Tools to develop manifest file and icons:</p>
-        <p><a href=">https://www.pwabuilder.com/" target="_blank">https://www.pwabuilder.com/</a></p>
+        <p><a href="https://www.pwabuilder.com/" target="_blank">https://www.pwabuilder.com/</a></p>
         <p><a href="https://tomitm.github.io/appmanifest/" target="_blank">https://tomitm.github.io/appmanifest/</a></p>
         <p><a href="https://app-manifest.firebaseapp.com/" target="_blank">https://app-manifest.firebaseapp.com/</a></p>
       </div>
