FINAL 07JUN2020 BTN PWA

--- a/11/index.html
+++ b/11/index.html
@@ -28,6 +28,7 @@
  
       <div class="w3-card-4" style="padding:30px;margin:20px auto;max-width:1000px">
         <h1>11 Add manifest file and icon images</h1>
+        <p>DEV TOOLS > Applications > Manifest</p>
         <p>One requirement for an Installable PWA is a manifest file and some icons of a certain size.</p>
         <p>Link to Google App Banner requirement: </p>
         <p>
