--- a/13/index.html
+++ b/13/index.html
@@ -58,7 +58,7 @@
   <main>
     <div class="w3-card-4" style="padding:30px;margin:20px auto;max-width:1000px">
       <h1>13 Register Service Worker</h1>
-      <p>We now need to register the SW so that it links website and OS.</p>
+      <p>We now need to register the SW so that it links website and Operating System.</p>
       <p>We now have a MANIFEST file, a SW with a FETCH event and have registered teh SW.</p>
       <p>This fulfils the Installable PWA requirements.</p>
     </div>
