--- a/14/index.html
+++ b/14/index.html
@@ -60,9 +60,7 @@
   <!-- !PAGE CONTENT! -->
   <main>
     <div class="w3-card-4" style="padding:30px;margin:20px auto;max-width:1000px">
-      <h1>ADD TO HOMESCREEN</h1>
-      <p>We are now able to activate the PWA INSTALLABLE feature.</p>
-    </div>
+      <h1>REPLACED BY 15</h1>
     <div style="height:40px;"></div>
   </main>
   <footer>
