--- a/15/index.html
+++ b/15/index.html
@@ -61,7 +61,7 @@
         homescreen.</p>
       <p>This concludes the UI section of the course.</p>
       <p>Clients may be happy with just the look of a Native App and the Add To Homescreen facility when they ask if yone can create an APP.</p>
-      <p>https://github.com/cubiq/add-to-homescreen</p>
+      <p><a href="https://github.com/cubiq/add-to-homescreen" target="_blank">https://github.com/cubiq/add-to-homescreen</a></p>
       <br>
     </div>
     <div style="height:40px;"></div>
