--- a/20/index.html
+++ b/20/index.html
@@ -33,10 +33,13 @@
     <div class="w3-card-4" style="padding:30px;margin:20px auto;max-width:1000px">
       <button id="add" class="w3-button w3-blue w3-medium">ADD TO HOMESCREEN</button>
       <div>
-        <br><br>
-        <p>
-          20 Demonstrate skipWaiting and when REGISTER/INSTALL/ACTIVATE are fired.
-        </p>
+        
+        <h1>
+          20 Demonstrate Service Worker Lifecycle.
+        </h1>
+        <p style="color:green">This is one of the most crucial concepts and is the highest hurdle of PWA.</p>
+        <p><a href="https://jakearchibald.com/2014/offline-cookbook/#on-network-response" target="_blank">Jake
+          Archibald's Offline Cookbook</a> shows this and his Offline Cookbok is a great resource.</p>
         <p>
           We have a very basic SW that just console.logs INSTALL and ACTIVATE. It also console.logs the FETCH event with
           the URL requested.
