--- a/50/form.html
+++ b/50/form.html
@@ -130,12 +130,10 @@
             <br><br>
     </main>
     <footer>
-        <div class="w3-container w3-blue">
-            <h5>Footer</h5>
-            <p>Footer information goes here</p>
-            <br>
+        <div class="w3-container w3-blue w3-center footer">
+          <p>PWA WORKSHOP - &copy; Craig West 2020</p>
         </div>
-    </footer>
+      </footer>
     <!-- MAINTAIN OFFLINE STYLE WHEN NAVIGATING OFFLINE -->
     <script src="../_js/style-offline.js"></script>
     <!-- RESPOND TO CHANGE IN ONLINE?OFFLINE -->
