--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="w3-card-4" style="margin:20px auto;max-width:700px">
       <div class="w3-container">
         <h2>PWA WORKSHOP</h2>
-        <h2><a href="/50/" target="_blank">DEMO VERSION</a></h2>
+        <h2><a href="./50/" target="_blank">DEMO VERSION</a></h2>
         <p>Contents</p>
         <table class="w3-table-all">
           <thead>
@@ -36,97 +36,97 @@
             <td>10</td>
             <td>We start with the very basics of pages. We can use whatthewebcando.today site to determine what PWA
               features it can support.</td>
-            <td><a href="/10/"  target="_blank">VIEW</a></td>
+            <td><a href="./10/"  target="_blank">VIEW</a></td>
           </tr>
           <tr>
             <td>11</td>
             <td>We add a manifest file and the necessary icons.</td>
-            <td><a href="/11/" target="_blank">VIEW</a></td>
+            <td><a href="./11/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
             <td>12</td>
             <td>We add a Service Worker file with a FETCH event. The event can be empty but a FETCH event must be in SW.
             </td>
-            <td><a href="/12/" target="_blank">VIEW</a></td>
+            <td><a href="./12/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
             <td>13</td>
             <td>The SW needs to be registered just once for the site. With a manfiest files, necessary icons and a SW
               with a fetch evetn we satisfy the requirements for an installable PWA.</td>
-            <td><a href="/13/" target="_blank">VIEW</a></td>
+            <td><a href="./13/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
             <td>14</td>
             <td>For cross broswer support with Apple and Microsoft, we add various meta tags, icons and link tags.</td>
-            <td><a href="/14/" target="_blank">VIEW</a></td>
+            <td><a href="./14/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
             <td>15</td>
             <td>This is the final lesson int the UI section of the course. We now have a fully installable PWA which can
               give an 'Add to Homescreen' feature.</td>
-            <td><a href="/15/" target="_blank">VIEW</a></td>
+            <td><a href="./15/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
             <td>20</td>
             <td>We look at the lifecyle of a SW. In particular we look at how a new SW can be installed but not
               activated if there are existing clients controlled by the old.</td>
-            <td><a href="/20/" target="_blank">VIEW</a></td>
+            <td><a href="./20/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
             <td>21</td>
             <td>We can now pre-cache the app shell in the install event of the SW.</td>
-            <td><a href="/21/" target="_blank">VIEW</a></td>
+            <td><a href="./21/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
             <td>22</td>
             <td>Using a CACHE then NETWORK strategy we can see an example of offline access for pages cached.</td>
-            <td><a href="/22/" target="_blank">VIEW</a></td>
+            <td><a href="./22/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
             <td>23</td>
             <td>For pages not already cached in the precaching event, we can offer a gracefullfallback page rather than
               the 'dinosaur' page. We also add to our DYNAMIC CACHE any pages that we get from the network.</td>
-            <td><a href="/23/" target="_blank">VIEW</a></td>
+            <td><a href="./23/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
             <td>24</td>
             <td>Having a version number for the SW has many advantages which are explained in this lesson. We also
               implement purging of previous caches as well as implementing a way of limiting the number of entries in
               the dynamic cache.</td>
-            <td><a href="/24/" target="_blank">VIEW</a></td>
+            <td><a href="./24/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
             <td>30</td>
             <td>We look at IndexedDB and build our first database to write and read from.</td>
-            <td><a href="/30/" target="_blank">VIEW</a></td>
+            <td><a href="./30/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
             <td>31</td>
             <td>We have completed creating oru IndexedDB database and loaded in some data into a number of tables, which
               we have then displayed as required.</td>
-            <td><a href="/31/" target="_blank">VIEW</a></td>
+            <td><a href="./31/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
             <td>40</td>
             <td>We look at the Notification API in HTML5 and set up our form for offline functionality.</td>
-            <td><a href="/40/" target="_blank">VIEW</a></td>
+            <td><a href="./40/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
             <td>41</td>
             <td>Using the BackgroundSync event in the SW, we can post the form when offline and be notified by a
               notification once bck online when it hwasw been sent.</td>
-            <td><a href="/41/" target="_blank">VIEW</a></td>
+            <td><a href="./41/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
             <td>42</td>
             <td>We add messaging from the SW to the page in addition to the notification.</td>
-            <td><a href="/42/" target="_blank">VIEW</a></td>
+            <td><a href="./42/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
             <td>50</td>
             <td>Messaging to and from the SW is set up enabling the page to make request to the SW in the 'message'
               event.</td>
-            <td><a href="/50/" target="_blank">VIEW</a></td>
+            <td><a href="./50/" target="_blank">VIEW</a></td>
           </tr>
         </table>
         <br>
